# dirstat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: colors.hpp  display.cpp  display.hpp  main.cpp  scanner.cpp  scanner.hpp  stats.hpp
